# JavaDroid

./: LICENSE  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/assets/: adi-registration.properties
app/src/main/assets/tcc_include/: stdalign.h  stdatomic.h  stdint.h  string.h
app/src/main/assets/tutorials/: 1.1.html  1.2.html  1.3.html  1.4.html  1.5.html  1.6.html  1.7.html  10.1.html  10.10.html  10.11.html  10.12.html  10.13.html  10.2.html  10.3.html  10.4.html  10.5.html  10.6.html  10.7.html  10.8.html  10.9.html  11.1.html  11.2.html  11.3.html  12.1.html  12.2.html  12.3.html  12.4.html  13.1.html  13.2.html  13.3.html  13.4.html  14.1.html  14.2.html  14.3.html  14.4.html  14.5.html  14.6.html  14.7.html  15.1.html  15.2.html  (+115 more)
app/src/main/cpp/: CMakeLists.txt  native_compiler_jni.c
app/src/main/res/drawable/: bg_dialog_rounded.xml  bg_project_avatar.xml  ic_bc_annotation.xml  ic_bc_class.xml  ic_bc_enum.xml  ic_bc_field_package.xml  ic_bc_field_private.xml  ic_bc_field_protected.xml  ic_bc_field_public.xml  ic_bc_interface.xml  ic_bc_package.xml  ic_bc_private.xml  ic_bc_protected.xml  ic_bc_public.xml  ic_debug.xml  ic_debug_breakpoint.xml  ic_debug_resume.xml  ic_debug_stop.xml  ic_git.xml  ic_menu.xml  ic_redo.xml  ic_run.xml  ic_save.xml  ic_search.xml  ic_settings.xml  ic_undo.xml
app/src/main/res/layout/: activity_learn.xml  activity_lesson.xml  activity_main.xml  activity_material.xml  activity_tutorial.xml  activity_welcome.xml  drawer_file_manager.xml  item_chapter.xml  item_file_tab.xml  item_file_tree.xml  item_instruction.xml  item_lesson.xml  item_lesson_block.xml  item_material.xml  item_method.xml  item_problem.xml  (+5 more)
app/src/main/res/layout-port/: activity_main.xml  activity_welcome.xml
(+283 files in other folders)
